noinst_LIBRARIES = liblanxang.a

AM_CPPFLAGS = \
	-DLOCALEDIR=\"$(localedir)\" \
	-DCOMPONENTDIR=\"$(componentdir)\" \
	-DPKGDATADIR=\"$(pkgdatadir)\" \
	$(NULL)

liblanxang_a_SOURCES = \
	lx-kbd.h \
	lx-kbd.c \
	lx-im-table.h \
	lx-im-table.c \
	$(NULL)

liblanxang_a_CFLAGS = \
	$(GLIB_CFLAGS) \
	$(NULL)

liblanxang_a_LIBADD = \
	$(NULL)

