noinst_LIBRARIES = liblanxang.a

AM_CPPFLAGS = \
	-DLOCALEDIR=\"$(localedir)\" \
	-DCOMPONENTDIR=\"$(componentdir)\" \
	-DPKGDATADIR=\"$(pkgdatadir)\" \
	$(NULL)

liblanxang_a_SOURCES = \
	lx-tham-kbd.h \
	lx-tham-kbd.c \
	lx-tham-im-table.h \
	lx-tham-im-table.c \
	$(NULL)

liblanxang_a_CFLAGS = \
	$(GLIB_CFLAGS) \
	$(NULL)

liblanxang_a_LIBADD = \
	$(NULL)

